--- a/src/components/CardGrid/Grid.module.scss
+++ b/src/components/CardGrid/Grid.module.scss
@@ -6,10 +6,11 @@
   flex-direction: column;
   overflow: hidden;
   padding: 80px 20px;
-  max-width: 1440px;
   margin: 0 auto;
+  transition: all 0.5s;
 
   &__container {
+    max-width: 1440px;
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
@@ -29,4 +30,8 @@
       gap: 32px;
     }
   }
+}
+
+.light {
+  background-color: var(--primary-white);
 }
