--- a/src/components/CardGrid/Grid.module.scss
+++ b/src/components/CardGrid/Grid.module.scss
@@ -1,37 +1,31 @@
 @import '../../scss/breakpoints.scss';
 
-.wrapper {
-  background-color: var(--primary-black);
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  padding: 80px 20px;
+.grid {
   margin: 0 auto;
-  transition: all 0.5s;
-
+  background: none;
+  padding: 80px 0;
   &__container {
-    max-width: 1440px;
+    max-width: 1280px;
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
   }
+  @media (min-width: $breakpoint-mobile) {
+      padding: 80px 20px;
+  }
 
   @media (min-width: $breakpoint-tablet) {
-    padding: 100px 20px;
     &__container {
       grid-template-columns: 1fr 1fr;
       gap: 24px;
     }
   }
-  @media (min-width: $breakpoint-s-desktop) {
+  @media (min-width: $breakpoint-l-desktop) {
+    max-width: 1440px;
     padding: 100px;
     &__container {
       grid-template-columns: 1fr 1fr 1fr;
       gap: 32px;
     }
   }
-}
-
-.light {
-  background-color: var(--primary-white);
 }
