--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -13,6 +13,22 @@
     line-height: 15px;
     text-transform: uppercase;
   }
+  &.svg-pos {
+    &-right {
+      svg {
+        position: absolute;
+        right: -24px;
+        fill: var(--primary-dark-gray);
+      }
+    }
+    &-left {
+      svg {
+        position: absolute;
+        left: -24px;
+        fill: var(--primary-dark-gray);
+      }
+    }
+  }
 
   &.outlined {
     width: 200px;
@@ -52,7 +68,7 @@
   }
 
 
-  &.underlined {
+  &.underlined, &.text-btn {
     position: relative;
     width: auto;
     height: auto;
@@ -97,6 +113,10 @@
         opacity: 0.5;
       }
     }
+  }
+
+  &.text-btn {
+    text-decoration: none;
   }
 
   &.delete, &.themeToggle, &.scrollUp {
