--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -6,15 +6,15 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  margin: 0 auto;
   background-color: var(--primary-white);
+  transition: all 0.5s;
   &.dark {
     background-color: var(--primary-black);
   }
 }
 
-
 .container {
-  margin: 0 auto;
   max-width: 1280px;
 }
 
