Adds Footer Component

--- a/src/components/UI/Link/Link.module.scss
+++ b/src/components/UI/Link/Link.module.scss
@@ -7,15 +7,23 @@
     line-height: 14px;
     color: var(--primary-dark-gray);
     text-decoration: underline;
-    &:hover {
+    svg {
+      fill: var(--primary-dark-gray);
+    }
+    &:hover, &:hover > svg {
       color: var(--primary-black);
+      fill: var(--primary-black);
     }
   }
 
   &.dark > span {
     color: var(--primary-light-gray);
-    &:hover {
+    svg {
+      fill: var(--primary-light-gray);
+    }
+    &:hover, &:hover > svg {
       color: var(--primary-white);
+      fill: var(--primary-white);
     }
   }
 }
