--- a/src/components/UI/Hamburger/Hamburger.module.scss
+++ b/src/components/UI/Hamburger/Hamburger.module.scss
@@ -1,6 +1,7 @@
 .hamburger {
   display: none;
   width: 24px;
+  z-index: 2;
   span {
     background-color: var( --icon-color);
     display: block;
