--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -44,33 +44,34 @@
     }
 
   }
-  &__options {
-    animation-delay: 2s;
-    position: fixed;
-    top: 0;
-    right: -100%;
-    height: 100%;
-    width: 252px;
-    background-color: var(--primary-white);
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    transition: 1s;
-    padding-top: 144px;
-    padding-left: 47px;
-    gap: 60px;
-    &.active {
-      right: 0;
-    }
-    &.dark {
-      background-color: var(--primary-black);
-    }
+}
+.menu__options {
+  animation-delay: 2s;
+  position: fixed;
+  z-index: 3;
+  top: 0;
+  right: -100%;
+  height: 100%;
+  width: 252px;
+  background-color: var(--primary-white);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  transition: 1s;
+  padding-top: 144px;
+  padding-left: 47px;
+  gap: 60px;
+  &.active {
+    right: 0;
+  }
+  &.dark {
+    background-color: var(--primary-black);
+  }
 
-    @media (min-width: $breakpoint-tablet) {
-      width: 466px;
-      padding-top: 200px;
-      padding-left: 94px;
-    }
+  @media (min-width: $breakpoint-tablet) {
+    width: 466px;
+    padding-top: 200px;
+    padding-left: 94px;
   }
 }
 
