--- a/src/components/Wrapper/wrapper.module.scss
+++ b/src/components/Wrapper/wrapper.module.scss
@@ -1,25 +1,24 @@
 @import '../../scss/breakpoints.scss';
 
 .wrapper {
+  display: flex;
   min-height: 100vh;
   box-sizing: border-box;
-  display: flex;
   flex-direction: column;
   position: relative;
+  align-items: center;
   background-color: var(--primary-white);
-  transition: all 0.5s;
   &.dark {
     background-color: var(--primary-black);
   }
 }
 
 .container {
-  margin: 0 auto;
-  max-width: 1280px;
+  width: 1280px;
 }
 
 @media (min-width: $breakpoint-l-desktop) {
   .container {
-    max-width: 1440px;
+    width: 1440px;
   }
 }
