--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -8,6 +8,13 @@
   text-transform: uppercase;
   transition: all 0.5s;
 
+  &-arrow {
+    transform: rotateZ(180deg);
+    svg > path {
+      fill: var(--primary-white);
+    }
+  }
+
   :hover {
     scale: 1.1;
     transition: scale ease-out 0.5s;
