--- a/src/components/Wrapper/wrapper.module.scss
+++ b/src/components/Wrapper/wrapper.module.scss
@@ -7,7 +7,6 @@
   box-sizing: border-box;
   flex-direction: column;
   position: relative;
-  align-items: center;
   background-color: var(--primary-white);
   &.dark {
     background-color: var(--primary-black);
@@ -15,12 +14,16 @@
 }
 
 .container {
+  align-self: center;
   max-width: 1280px;
 }
 
 
 @media (min-width: $breakpoint-l-desktop) {
-  .container {
-    min-width: 1440px;
+  .wrapper {
+    .container {
+      min-width: 1440px;
+    }
   }
+
 }
