--- a/src/components/ArtistAbout/ArtistAbout.module.scss
+++ b/src/components/ArtistAbout/ArtistAbout.module.scss
@@ -32,8 +32,7 @@
 
   &__img {
     width: 100%;
-    height: auto;
-    object-fit: cover;
+    height: 100%;
   }
 
   &__description {
@@ -129,7 +128,7 @@
     }
 
     &__img {
-      height: auto;
+      height: 100%;
       width: 100%;
     }
 
