--- a/src/components/UI/Image/Image.module.scss
+++ b/src/components/UI/Image/Image.module.scss
@@ -2,4 +2,14 @@
   width: 100%;
   height: 100%;
   position: relative;
+  padding-bottom: 66%;
+}
+
+.image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
