--- a/src/components/UI/Image/Image.module.scss
+++ b/src/components/UI/Image/Image.module.scss
@@ -6,10 +6,12 @@
 }
 
 .image {
+  opacity: 1;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: opacity 0.3s ease-in-out;
 }
