--- a/src/components/UI/Loader/Loader.module.scss
+++ b/src/components/UI/Loader/Loader.module.scss
@@ -42,10 +42,17 @@
   }
   &__container {
     height: 100vh;
-    width: auto;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    &.inside {
+      height: 100%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translateY(-50%) translateX(-50%);
+    }
   }
   &__item {
     animation: rotate 1s linear infinite;
