--- a/src/fonts/_fonts.scss
+++ b/src/fonts/_fonts.scss
@@ -1,28 +1,28 @@
 @font-face {
   font-family: Cormorant;
-  src: url(../fonts/CormorantSC-Medium.ttf);
+  src: url(CormorantSC-Medium.ttf);
   font-weight: 500;
 }
 @font-face {
   font-family: Cormorant;
-  src: url(../fonts/CormorantSC-Bold.ttf);
+  src: url(CormorantSC-Bold.ttf);
   font-weight: 700;
 }
 
 @font-face {
   font-family: Inter;
-  src: url(../fonts/Inter-Light.ttf);
+  src: url(Inter-Light.ttf);
   font-weight: 300;
 }
 
 @font-face {
   font-family: Inter;
-  src: url(../fonts/Inter-Medium.ttf);
+  src: url(Inter-Medium.ttf);
   font-weight: 500;
 }
 
 @font-face {
   font-family: Inter;
-  src: url(../fonts/Inter-Bold.ttf);
+  src: url(Inter-Bold.ttf);
   font-weight: 700;
 }
