--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,4 +1,5 @@
 @import '../../scss/breakpoints.scss';
+@import '../../scss';
 
 .footer {
   padding: 40px 20px;
@@ -22,18 +23,12 @@
 
     span {
       color: var(--info-color);
-      font-family: Inter, sans-serif;
-      font-weight: 300;
-      font-size: 16px;
-      line-height: 140%;
+      @include inter-16-regular;
     }
 
     span:nth-child(2) {
       color: var(--name-color);
-      font-family: Inter, sans-serif;
-      font-weight: 300;
-      font-size: 16px;
-      line-height: 140%;
+      @include inter-16-regular;
     }
   ;
   }
@@ -57,5 +52,4 @@
   @media (min-width: $breakpoint-l-desktop) {
     padding: 40px 100px;
   }
-
 }
