--- a/src/components/UI/Accordeon/Accordion.styles.scss
+++ b/src/components/UI/Accordeon/Accordion.styles.scss
@@ -1,13 +1,12 @@
+@import "../../../scss";
+
 .accordion {
   width: 100%;
   display: flex;
   flex-direction: column;
   &-content {
     height: 100%;
-    font-family: Inter, sans-serif;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 140%;
+    @include inter-16-regular;
     text-align: justify;
     color: var(--text-color);
     padding-bottom: 20px;
