--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -5,9 +5,31 @@
   line-height: 1.25;
 }
 
+
+@mixin inter-12-regular {
+  font-family: Inter, sans-serif;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 1.25;
+}
+
+@mixin inter-12-bold {
+  font-family: Inter, sans-serif;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.25;
+}
+
 @mixin inter-16-regular {
   font-family: Inter, sans-serif;
   font-weight: 300;
+  font-size: 16px;
+  line-height: 1.25;
+}
+
+@mixin inter-16-bold {
+  font-family: Inter, sans-serif;
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.25;
 }
