--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -13,6 +13,13 @@
   line-height: 1.25;
 }
 
+@mixin inter-12-medium {
+  font-family: Inter, sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.25;
+}
+
 @mixin inter-12-bold {
   font-family: Inter, sans-serif;
   font-weight: 700;
