--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@import '../../scss/breakpoints';
+@import '../../scss/breakpoints.scss';
 @import '../../scss';
 
 .header {
@@ -7,48 +7,147 @@
   align-items: center;
   justify-content: space-between;
   --icon-color: var(--primary-black);
-  &_logo {
-    svg > path {
-        fill: var(--icon-color);
-    }
-  }
+
   &.dark {
     --icon-color: var(--primary-white);
   }
 
-  &__buttons {
-    height: 20px;
+  &_logo {
+    svg > path {
+      fill: var(--icon-color);
+    }
+  }
+
+  &_login > span {
+    height: 32px;
+    @include cormorant-32-bold;
+  }
+
+  &_signup > span {
+    height: 32px;
+    @include cormorant-32-bold;
+  }
+
+  &-hamburger {
+    display: block;
+  }
+
+  &_themeBtn > span {
+    height: 32px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    gap: 20px;
-    transition: all 0.5s;
+  }
 
-    & > button:last-of-type {
-      margin-left: 40px;
-      width: 32px;
+  &_themeIcon {
+    width: max-content;
+    padding: 6px;
+    margin-right: 12px;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    &.dark {
+      background-color: var(--secondary-black);
+    }
+  }
+
+  &__buttons {
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    right: -100%;
+    height: 100%;
+    width: 252px;
+    background-color: var(--primary-white);
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    align-items: flex-start;
+    transition: 1s;
+    padding-top: 144px;
+    padding-left: 47px;
+    gap: 60px;
+
+    &.active {
+      right: 0;
+    }
+
+    &.dark {
+      background-color: var(--primary-black);
     }
 
   }
 
-  &__button > span {
-    @include cormorant-16-bold;
-  }
-
-  @media (max-width: $breakpoint-s-desktop) {
-    .header__buttons > button:nth-child(-n+3) {
-      display: none;
+  @media (min-width: $breakpoint-tablet) {
+    &__buttons {
+      width: 466px;
+      padding-top: 200px;
+      padding-left: 94px;
     }
-    .header__buttons > div {
-      display: block;
+    &_signup > span, &_login > span {
+      height: 60px;
+      font-size: 60px;
     }
   }
 
   @media (min-width: $breakpoint-l-desktop) {
     padding: 33px 100px;
-    &__container {
-      grid-template-columns: 1fr 1fr 1fr;
-      gap: 32px;
+    .header_themeIcon {
+      background: none;
+      .dark {
+        background: none;
+      }
     }
+    &-hamburger {
+      display: none;
+    }
+    &_themeBtn {
+      margin-left: 40px;
+      width: 32px;
+      margin-right: 0;
+    }
+    &__buttons {
+      position: static;
+      height: 20px;
+      display: flex;
+      padding: 0;
+      flex-direction: row;
+      align-items: center;
+      gap: 20px;
+      transition: all 0.5s;
+      background: none;
+      &.dark {
+        background: none;
+      }
+    }
+    &_signup > span, &_login > span {
+      height: 16px;
+      font-size: 16px;
+    }
+  }
+}
+
+.header-bg {
+  display: block;
+  visibility: hidden;
+  transition: all ease 0.5s;
+  opacity: 0;
+  position: fixed;
+  z-index: 2;
+  right: 0;
+  top: 0;
+  --transparency-value: 0.3;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(0, 0, 0, var(--transparency-value));
+
+  &.dark {
+    --transparency-value: 0.6;
+  }
+
+  &.active {
+    visibility: visible;
+    opacity: 1;
   }
 }
