--- a/src/components/UI/AuthForm/AuthForm.module.scss
+++ b/src/components/UI/AuthForm/AuthForm.module.scss
@@ -1,6 +1,8 @@
 .AuthForm {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 60px;
+  &_button {
+    align-self: center;
+  }
 }
