--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -55,6 +55,13 @@
   line-height: 1.25;
 }
 
+@mixin cormorant-32-bold {
+  font-family: Cormorant, sans-serif;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 1.25;
+}
+
 @mixin cormorant-60-regular {
   font-family: Cormorant, sans-serif;
   font-weight: 500;
