--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -34,6 +34,14 @@
   line-height: 1.25;
 }
 
+@mixin inter-16-medium {
+  font-family: Inter, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+}
+
+
 @mixin inter-16-bold {
   font-family: Inter, sans-serif;
   font-weight: 700;
