--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -91,8 +91,7 @@
     }
   }
 
-  @media (min-width: $breakpoint-l-desktop) {
-    padding: 33px 100px;
+  @media (min-width: $breakpoint-s-desktop) {
     .header_themeIcon {
       background: none;
       .dark {
@@ -125,6 +124,10 @@
       height: 16px;
       font-size: 16px;
     }
+  }
+
+  @media (min-width: $breakpoint-l-desktop) {
+    padding: 33px 100px;
   }
 }
 
