--- a/src/components/UI/Label/Label.module.scss
+++ b/src/components/UI/Label/Label.module.scss
@@ -8,21 +8,27 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	gap: 10px;
+
+	cursor: pointer;
 
 	border: 1px solid transparent;
 	background-color: rgba(18, 18, 18, 0.05);
 	color: var(--primary-dark-gray);
 
 	&__btn {
-		border: none;
-		padding: 0;
-		background-color: inherit;
-		cursor: pointer;
+		svg {
+			height: 8px;
+			width: 8px;
+		}
 	}
 	&.dark {
 		border: 1px solid var(--primary-white);
 		background-color: rgba(205, 205, 205, 0.05);
 		color: var(--primary-light-gray);
+		&__btn {
+			color: var(--primary-light-gray);
+		}
 	}
 }
 
